# memory-layer

./: .env.amem  .gitignore  AGENTS.md  AMEM_INTEGRATION.md  AMEM_SETUP_COMPLETE.md  Cargo.toml  EXTRACTION_IMPROVEMENTS.md  LICENSE  MIGRATION_GUIDE.md  Makefile  NEXT_STEPS.md  README.md  STATUS.md  test-instant-ingestion.sh
apps/chrome-ext/: generate-icons.sh  manifest.json  package-lock.json  package.json  webpack.config.js
apps/chrome-ext/src/background/: service-worker.js
apps/chrome-ext/src/content/: chatgpt.js  claude.js  styles.css
apps/chrome-ext/src/popup/: popup.html  popup.js
apps/chrome-ext/src/shared/: injector.js
apps/mac-daemon/: Info.plist  MemoryLayer.entitlements  Package.swift
apps/mac-daemon/Sources/MemoryLayer/: AccessibilityWatcher.swift  AppDelegate.swift  AppManagerWindowController.swift  BundleIdentifierResolver.swift  ClaudeDesktopAdapter.swift  DesignSystem.swift  HotkeyManager.swift  IngestionClient.swift  Main.swift  MemoryConsoleSampleData.swift  MemoryConsoleWindowController.swift  MemoryServiceClient.swift  Models.swift  PreferencesWindowController.swift  ProviderClient.swift  SearchPanelController.swift  StatusItemController.swift
apps/mac-daemon/Sources/MemoryLayer/Resources/KnowledgeGraph/: graph.js  index.html
core/composer/: Cargo.toml
core/composer/src/: composer.rs  lib.rs  main.rs  templates.rs
core/indexing/: Cargo.toml
core/indexing/src/: agentic.rs  amem.rs  embedding_adapter.rs  lib.rs  llm_providers.rs  main.rs  main_amem.rs  search.rs
core/ingestion/: Cargo.toml
core/ingestion/src/: database.rs  extractor.rs  heuristic.rs  lib.rs  llm_extractor.rs  main.rs  migration.rs  organizer.rs  worker.rs
core/ingestion/tests/: auto_organization_test.rs  instant_ingestion_test.rs
core/schemas/: Cargo.toml  Types.swift  context_capsule.schema.json  memory.schema.json  turn.schema.json  types.ts
core/schemas/src/: lib.rs
scripts/: bootstrap.sh  dev.sh  lint.sh  pkg.sh  run-amem.sh  setup_amem_ollama.py  setup_amem_ollama_v2.py  test.sh  test_amem.py  test_amem_working.py  test_minimal.py
ui/copy/: strings.en.json
