[package]
name = "memory-layer-ingestion"
version = "0.1.0"
edition = "2021"
authors = ["Ashvin Arora"]
description = "Ingestion service for Personal Memory Layer - captures and normalizes events"

[dependencies]
memory-layer-schemas = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
ulid = { workspace = true }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Async and networking
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time and date
chrono = "0.4"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3.0"

[dev-dependencies]
