[package]
name = "memory-layer-schemas"
version = "0.1.0"
edition = "2021"
authors = ["Ashvin Arora"]
description = "Core data schemas for Personal Memory Layer"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid = "1.1"

[dev-dependencies]
# Test dependencies added as needed
